core/test/scala/corner.check
error: XML document structures must start and end within the same entity.
  xml"<foo"
      ^